// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sxqc8p4 {
  color: var(--colors-primary500);
  font-family: var(--fonts-sans);
  text-decoration: none;
  cursor: pointer;
}

.sxqc8p4:focus,
.sxqc8p4:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sxqc8p4:active,
.sxqc8p4:visited {
  color: var(--colors-primary500);
}

.sxqc8p45dbgn--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

<div>
  <a
    class="sxqc8p4 sxqc8p45dbgn--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sxqc8p4 {
  color: var(--colors-primary500);
  font-family: var(--fonts-sans);
  text-decoration: none;
  cursor: pointer;
}

.sxqc8p4:focus,
.sxqc8p4:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sxqc8p4:active,
.sxqc8p4:visited {
  color: var(--colors-primary500);
}

.sxqc8p45dbgn--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sxqc8p4n3mo2--size-lg {
  font-size: var(--fontSizes-lg);
  line-height: 1.52;
}

<div>
  <a
    class="sxqc8p4 sxqc8p4n3mo2--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
